--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,8 @@
 /*class for body of page.   Children will inherit without further class specification*/
+html {
+	height: 100%
+}
+
 body {
     background-color: #eeeeee;
     height: 100%;
@@ -9,29 +13,28 @@ body {
 
 /* id for header.  ID becuase it is only used once on each page, by one element */
 #header {
-	margin-left: 250px;
-	margin-right: 250px;
-	margin-top: 0px;
-	margin-bottom:  0px;
-	background-color: black;
-	height: 100px;
-	position: fixed;
-	top: 0;
-	width: 780px;
+    margin-left: 19.5%;
+    margin-right: 19.5%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    background-color: black;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    width: 61%;
 }
 
 /* specific id detail for h1 elements within header element*/
 #header h1 {
-
-	font-family: 'Courier New', Courier;
-	font-size: 60px;
-	font-weight: 500;
-	color: white;
-	text-align: left;
-   	margin: 0;
-	padding-top: 20px;
-	padding-bottom: 20px; 
-	display: inline-block;
+    font-family: 'Courier New', Courier;
+    font-size: 350%;
+    font-weight: 500;
+    color: white;
+    text-align: left;
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: inline-block;
 }
 
 #header a {
@@ -65,10 +68,10 @@ li.nav {
 
 #overlay {
 	background-color: #fbfbfb;
-	margin-left: 250px;
-	margin-right: 250px;
+	margin-left: 19.5%;
+	margin-right: 19.5%;
 	margin-top: 0px;
-	min-height: 600px;
+	min-height: 100%;
 	padding-top: 100px;
 
 }
@@ -120,6 +123,11 @@ div.blog-post {
 	margin-top: 15px;
 	margin-right: 250px;
 	margin-bottom: 15px;
+}
+
+h2 {
+	font-family: 'Courier';
+	font-weight: 400;
 }
 
 
