--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,21 @@
 
 */
 
+
+/* Media queries*/
+
+@media only screen and (max-width: 750px) {
+    #header {
+        min-width: 100%;
+    }
+    #overlay {
+        min-width: 100%;
+    }
+}
+
+
+/***************/
+
 html {
 	height: 100%
 }
