--- a/styles/main.css
+++ b/styles/main.css
@@ -20,111 +20,25 @@ _______________________________________________
 */
 
 html {
-    height: 100%;
     font-size: 100%;
+    height: 100%;
 }
 
 body {
     font-family: courier;
-    height: 100%;
     background-color: #FFFFFF;
+
 }
 
 
-/*
-_______________________________________________
-
-Media Queries
-_______________________________________________
-*/
 
 
-/* Larger than mobile */
-/*@media only screen and (min-width: 400px) {
-    .ext-links ul {
-        justify-content: space-between;
-        display: flex;
-    }
 
-    .ext-links img {
-        max-height: 4em;
-        padding: 0;
-        margin: 0;
-    }
-
-    .heading ul {
-        display: none;
-    }
-
-
-    .row {
-        width: 100%;
-    }
-    .container {
-        margin-left: 0;
-        margin-right: 0;
-        width: 100%;
-    }
-}*/
-
-/* Larger than phablet */
-/*@media only screen and (max-width: 550px) {
-
-
-    .ext-links ul {
-    justify-content: space-between;
-    display: flex;
-        
-    }
-    .ext-links img {
-    max-height: 4em;
-    padding: 0;
-    margin: 0;
-    }
-
-    .row {
-        width: 100%;
-    }
-
-        .container {
-        margin-left: 0;
-        margin-right: 0;
-    }
-
-
-}*/
-
-/* Larger than tablet */
-/*@media (min-width: 750px) {
-
-    body {
-        background-color: white;
-    }
-
-    .ext-links ul {
-    justify-content: space-between;
-    display: flex;
-        
-    }
-    .ext-links img {
-    max-height: 7em;
-    padding: 0;
-    margin: 0;
-    }
-}*/
-
-/* Larger than desktop */
-@media (min-width: 1000px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {}
-
-/*
-_______________________________________________
+/*_______________________________________________
 
 Navbar at top
-_______________________________________________
-*/
+_______________________________________________*/
+
 
 .ext-links {
     margin-left: auto;
@@ -138,13 +52,13 @@ _______________________________________________
 }
 
 .ext-links li {
-    padding: 1em;
+    padding: 1rem;
 }
 
 .ext-links img {
     padding: 0;
     margin: 0;
-    max-height: 3em;
+    /*max-height: 3rem;*/
 
 }
 
@@ -170,7 +84,7 @@ _______________________________________________
     margin-right: auto;
     display: block;
     text-align: center;
-    padding-top: 5em;
+    padding-top: 1rem;
 }
 
 
@@ -180,20 +94,17 @@ _______________________________________________
     width: 100%;
     list-style: none;
     flex-wrap: wrap;
-    font-size: 1.5em;
+    /*font-size: 3.5rem;*/
     color: #545E67;
 }
 
 h1 {
-    font-size: 3em;
+    /*font-size: 6rem;*/
     color: #545E67;
     border-bottom: solid 1px;
     width: auto;
 }
-h2 {
-    font-size: 2em;
 
-}
 
 /*
 _______________________________________________
@@ -205,30 +116,30 @@ _______________________________________________
 .main a {
     display: block;
     text-align: center;
-    font-size: 2em;
+    font-size: 4rem;
     color: #F7D100;
 }
 
+/*_______________________________________________
 
-
-
-/*
-_______________________________________________
-
-Footer & wrapper for sticky footer
+Blog list 
 _______________________________________________
 */
 
-.wrapper {
-    margin-bottom: -7em;
-    min-height: 100%;
+.bloglist a {
+    color: #F7D100;
+}
+.bloglist li {
+    display: block;
+    text-align: left;
+    /*font-size: 1rem;*/
+    list-style: none;
 }
 
-footer {
-    position: relative;
-    height: 100%;
-    bottom: 0;
+.bloglist p {
+    /*font-size: 0.8rem;*/
 }
+
 
 /*
 _______________________________________________
@@ -239,3 +150,110 @@ _______________________________________________
 /** {
     outline:  solid 2px blue;
 }*/
+
+
+
+/*
+_______________________________________________
+
+Media Queries
+_______________________________________________
+*/
+
+
+
+/* Larger than phablet */
+@media (min-width: 300px) {
+/*    body {
+        background-color: #95b9ad;
+    }*/
+
+    .ext-links ul {
+        justify-content: space-between;
+        display: flex;
+    }
+
+    .ext-links img {
+        max-height: 4rem;
+        padding: 0;
+        margin: 0;
+    }
+
+    .heading ul {
+        display: flex;
+        font-size: 1rem;
+    }
+    .bloglist li {
+        display: block;
+        text-align: center;
+        font-size: 1.1rem;
+        list-style: none;
+    }
+
+
+}
+
+/* Larger than mobile */
+@media (min-width: 500px) {
+/*    body {
+        background-color: #00ffff;
+    }*/
+
+        h1 {
+        /*font-size: 4.5rem;*/
+    }
+
+    .ext-links ul {
+        justify-content: space-between;
+        display: flex;
+    }
+
+    .ext-links img {
+        max-height: 5rem;
+        padding: 0;
+        margin: 0;
+    }
+
+    .heading ul {
+        font-size: 1.5rem;
+        display: flex;
+    }
+
+    .bloglist li {
+        display: block;
+        text-align: left;
+        font-size: inherit;
+        list-style: none;
+    }
+
+
+}
+/* Larger than tablet */
+@media (min-width: 750px) {
+/*    body {
+        background-color: #eb8c00;
+    }*/
+
+    .ext-links ul {
+        justify-content: space-between;
+        display: flex;
+    }
+
+    .ext-links img {
+        max-height: 6rem;
+        padding: 0;
+        margin: 0;
+    }
+
+    .heading ul {
+        display: flex;
+    }
+
+
+/*    .row {
+        width: 100%;
+    }
+    .container {
+        width: 100%;
+    }*/
+}
