--- a/styles/main.css
+++ b/styles/main.css
@@ -117,6 +117,10 @@ Main
 _______________________________________________
 */
 
+.hide {
+    display: none;
+}
+
 .main a {
     display: block;
     text-align: center;
