--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ html {
 
 body {
     font-family: courier;
-    background-color: #f7f7f7;
+    background-color: white;
 
 }
 
@@ -86,6 +86,7 @@ _______________________________________________
 #mypic {
     background-image: url('assets/background-einstein.jpg');
     background-size: cover;
+    min-height: 23.5rem;
 }
 
 .heading {
@@ -124,7 +125,7 @@ Main
 _______________________________________________
 */
 
-#hessian {
+#whitespace {
     background-color: white;
 }
 
